5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1577_579.log
== SUBMITION (2019-03-16 13:30:14) 
-- CODE:
print(A UFAM tem,2016-1909,anos de fundacao)
-- EXECUTION TIME:
0.195012
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(A UFAM tem,2016-1909,anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:30:34) 
-- CODE:
print(A UFAM tem,2016-1909,anos de fundacao)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem,2016-1909,anos de fundacao)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:31:31) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.11447
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:31:34) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.204142
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:31:38) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 107 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:31:57) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao")
-- EXECUTION TIME:
0.125205
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:32:06) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundacao")
-- EXECUTION TIME:
0.135621
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:32:11) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundacao")
-- EXECUTION TIME:
0.152246
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 13:32:13) 
-- CODE:
print("A UFAM tem",2019-1909,"anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 13:32:39) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.12728
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
